export default interface ISensor {
    set temperaturaNucleo(temperatura : number);
    get getTemperaturaNucleo () : number;
}